# 0.5.0-SNAPSHOT
- add logrus with multiple output : file + stdout

# 0.4.0
- add log file
- add benchmark test for fizzbuzz service

# 0.3.0
- fizzbuzz controller implementation
- add Makefile

# 0.2.0
- fizzbuzz controller using TDD
- updated README
- gitpod config

# 0.1.0
- project initialization
- fizzbuzz service using TDD