@@ -1,4 +1,5 @@
 # 0.5.0-SNAPSHOT
+- add docker build
 - add logrus with multiple output : file + stdout
 
 # 0.4.0
